--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -88,6 +88,7 @@
 
         &__grid {
             margin-bottom: 5rem;
+            grid-gap: 1.875rem;
         }
     }
 }
